objects/APTS_SAP_SalesAreaConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>APTS_ApttusOrgId__c</fullName>
        <label>Apttus OrgId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea, Republic of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxembourg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian Federation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saudi Arabia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan, Province of China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_CustomerDistributionChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Sales Distribution Channel</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Code_Used_For__c</field>
                <operation>equals</operation>
                <value>Distribution Channel</value>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>SAP Sales Area Configurations (Customer Sales Distribution Channel)</relationshipLabel>
        <relationshipName>APTS_CustomerSalesConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_CustomerDivision__c</fullName>
        <label>Customer Sales Division</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CustomerSalesOrganization__c</fullName>
        <label>Customer Sales Organization</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SystemId__c</fullName>
        <label>System Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TransactionalDistributionChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transactional Sales Distribution Channel</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Code_Used_For__c</field>
                <operation>equals</operation>
                <value>Distribution Channel</value>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>SAP Sales Area Configurations(Transactional Sales Distribution Channel)</relationshipLabel>
        <relationshipName>APTS_TransactionalSalesConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_TransactionalDivision__c</fullName>
        <label>Transactional Sales Division</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TransactionalSalesOrganization__c</fullName>
        <label>Transactional Sales Organization</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SAP Sales Area Configuration</label>
    <listViews>
        <fullName>APTS_France_Sales_Area_Config</fullName>
        <columns>NAME</columns>
        <columns>APTS_ApttusOrgId__c</columns>
        <columns>APTS_SystemId__c</columns>
        <columns>APTS_CustomerDistributionChannel__c</columns>
        <columns>APTS_CustomerDivision__c</columns>
        <columns>APTS_CustomerSalesOrganization__c</columns>
        <columns>APTS_TransactionalDistributionChannel__c</columns>
        <columns>APTS_TransactionalDivision__c</columns>
        <columns>APTS_TransactionalSalesOrganization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <label>France Sales Area Config</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Italy_Sales_Area_Config</fullName>
        <columns>NAME</columns>
        <columns>APTS_ApttusOrgId__c</columns>
        <columns>APTS_SystemId__c</columns>
        <columns>APTS_CustomerDistributionChannel__c</columns>
        <columns>APTS_CustomerDivision__c</columns>
        <columns>APTS_CustomerSalesOrganization__c</columns>
        <columns>APTS_TransactionalDistributionChannel__c</columns>
        <columns>APTS_TransactionalDivision__c</columns>
        <columns>APTS_TransactionalSalesOrganization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Italy</value>
        </filters>
        <label>Italy Sales Area Config</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Spain_Sales_Area_Config</fullName>
        <columns>NAME</columns>
        <columns>APTS_ApttusOrgId__c</columns>
        <columns>APTS_SystemId__c</columns>
        <columns>APTS_CustomerDistributionChannel__c</columns>
        <columns>APTS_CustomerDivision__c</columns>
        <columns>APTS_CustomerSalesOrganization__c</columns>
        <columns>APTS_TransactionalDistributionChannel__c</columns>
        <columns>APTS_TransactionalDivision__c</columns>
        <columns>APTS_TransactionalSalesOrganization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Spain</value>
        </filters>
        <label>Spain Sales Area Config</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_ApttusOrgId__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>APTS_SystemId__c</columns>
        <columns>APTS_TransactionalSalesOrganization__c</columns>
        <columns>APTS_TransactionalDistributionChannel__c</columns>
        <columns>APTS_TransactionalDivision__c</columns>
        <columns>APTS_CustomerSalesOrganization__c</columns>
        <columns>APTS_CustomerDistributionChannel__c</columns>
        <columns>APTS_CustomerDivision__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_EP_SAP_Sales_Area_Config</fullName>
        <columns>NAME</columns>
        <columns>APTS_ApttusOrgId__c</columns>
        <columns>APTS_SystemId__c</columns>
        <columns>APTS_CustomerDistributionChannel__c</columns>
        <columns>APTS_CustomerSalesOrganization__c</columns>
        <columns>APTS_TransactionalDistributionChannel__c</columns>
        <columns>APTS_TransactionalDivision__c</columns>
        <columns>APTS_TransactionalSalesOrganization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>CN-EP/SAP Sales Area Config</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SAC-{0000000}</displayFormat>
        <label>SAP Sales Area Configuration #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Sales Area Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>